--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "whatsapp-local",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Microservicio local de WhatsApp con Electron",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "dev": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "venom-bot": "^5.3.0"
+  },
+  "devDependencies": {
+    "electron": "^36.2.1"
   }
 }
